Updated index.html file with bug fix on whatsapp and facebook link button

--- a/index.html
+++ b/index.html
@@ -188,8 +188,9 @@
         <div class="form">
             <a href="tel:+2347066550517" target="_blank"><img src="./assets/icons/phone-call-telephone-svgrepo-com.svg" alt=""></a>
             <a href="mailto:dochumaacademy@gmail.com" target="_blank"><img src="./assets/icons/gmail-svgrepo-com.svg" alt=""></a>
-            <a href="http://www.facebook.com/profile.php?id=6158081524025" target="_blank"><img src="./assets/icons/facebook-network-communication-internet-interaction-svgrepo-com.svg" alt=""></a>
-            <a href="https://wa.me/234XXXXXXXXXX?text=Hello%20Dochuma%20Academy%2C%20I%20found%20your%20website%20and%20I'm%20interested%20in%20your%20speed%20and%20abacus%20math%20lessons%20for%20my%20child.%20Could%20you%20please%20share%20more%20details%20about%20your%20programs%20and%20how%20to%20get%20started%3F" target="_blank"><img src="./assets/icons/whatsapp-icon-logo-svgrepo-com.svg" alt=""></a>
+            <a href="https://www.facebook.com/profile.php?id=61580815124025&mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/facebook-network-communication-internet-interaction-svgrepo-com.svg" alt=""></a>
+            <a href="https://wa.me/2347066550517?text=Hello%2C%20I%20visited%20DOCHUMA%20Academy%20website%20and%20I%27m%20interested%20in%20some%20of%20your%20services.%20Could%20you%20please%20provide%20more%20information?" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/whatsapp-icon-logo-svgrepo-com.svg" alt=""></a>
+
 
         </div>
     </div>
