Remove autoplay from video in index.html
Removed autoplay attribute from video element.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h2>
             Join Dochuma Academy — Where Every Child Becomes a Human Calculator.
         </h2>
-        <video src="assets/videos/mrs-bright-intro.mp4" autoplay playsinline controls="controls" preload="auto"></video>
+        <video src="assets/videos/mrs-bright-intro.mp4" playsinline controls="controls" preload="auto"></video>
 
         <a href="http://www.facebook.com/profile.php?id=6158081524025" target="_blank" style="">Learn More</a>
     </div>
