--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="apple-touch-icon" href="assets/images/dochuma-logo_upscaled.jpg">
     <link rel="shortcut icon" href="assets/images/dochuma-logo_upscaled.jpg" type="image/x-icon">
     <link re="icon" type="image/jpg" href="assets/images/dochuma-logo_upscaled.jpg">
+    <link rel="stylesheet" href="assets/animation.css">
     <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="assets/responsive.css">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="dochuma, academy, speed maths, maths, coding, mental maths, mental, cowbellpedia, abacus, finger, finger abacus, abacus and speed maths, mathematics, speed mathematics, abacus mathematics, index, follow">
 
@@ -25,14 +27,16 @@
     <meta name="twitter:creator" content="@irhayeElvis">
 </head>
 <body>
-    <section class="loader" id="fade">
+    <!-- <section class="loader">
         <div class="intro-heading">
             <p id="i">Building</p> <p id="ii">Fast </p> <p id="iii">Thinkers</p> <p id="iv">for a</p> <p id="v">Smarter</p> <p id="vi">Tomorrow</p>
         </div>
-    </section>
+    </section> -->
 
     <!-- nav-bar -->
     <div class="actual-menu">
+        <img src="assets/images/dochuma-logo_upscaled.jpg" alt="">
+        <p>Dochuma Academy</p>
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#intro">Introduction</a></li>
@@ -66,7 +70,7 @@
         <div class="header">
             <img src="assets/images/dochuma-logo_upscaled.jpg" alt="">
             <p>Building Fast Thinkers for a Smarter Tomorrow</p>
-            <h1>DOCHUMA ACADEMY</h1>
+            <h1 id="gradient">DOCHUMA ACADEMY</h1>
         </div>
     </div>
 
@@ -81,12 +85,19 @@
                 <h1>EDUCATING OVER 40 SCHOOLS</h1>
             </div>
         </div>
-        <h2>
-            Join Dochuma Academy — Where Every Child Becomes a Human Calculator.
-        </h2>
-        <video src="assets/videos/mrs-bright-intro.mp4" playsinline controls="controls" preload="auto"></video>
-
-        <a href="http://www.facebook.com/profile.php?id=6158081524025" target="_blank" style="">Learn More</a>
+        <hr>
+        <div class="showcase-group">
+            <div class="showcase-group-1">    
+                <h2>
+                    Join Dochuma Academy — Where Every Child Becomes a Human Calculator.
+                </h2>
+                <div class="showcase-group-link">
+                    <a href="#contact">Learn More</a>
+                </div>
+            </div>
+            <video src="assets/videos/mrs-bright-intro.mp4" playsinline controls="controls" preload="auto"></video>
+        </div>
+        <hr>
     </div>
 
     <!-- introduction-section -->
@@ -117,11 +128,23 @@
                 <img src="assets/images/4x3-3.png" alt="slide-show">
             </div>
         </div>
+
+            <!-- desktop -->
+        <div class="grid-desktop">
+            <img src="assets/images/4x3-1.png" alt="slide-show">
+            <img src="assets/images/4x3-2.png" alt="slide-show">
+            <img src="assets/images/8x10-1.png" alt="slide-show">
+            <img src="assets/images/8x10-2.png" alt="slide-show">
+            <img src="assets/images/8x10-3.png" alt="slide-show">
+            <img src="assets/images/8x10-5.png" alt="slide-show">
+            <img src="assets/images/4x3-3.png" alt="slide-show">
+        </div>
+        </div>
     </div>
 
     <div class="about" id="about">
         <div class="head"> <hr>
-            <h1>💡 About Dochuma Academy</h1> <hr>
+            <h1>💡 </h1><h1 id="gradient">About Dochuma Academy</h1> <hr>
         </div>
         <div class="content">
             <p>
@@ -179,25 +202,24 @@
 
     <div class="contact" id="contact">
         <div class="end">
-            <h1>🚀 Join the Dochuma Family</h1>
+            <h1>🚀</h1>
+            <h1 id="gradient">Join the Dochuma Family</h1>
             <p>
                 Give your child the confidence to think faster, smarter, and sharper. <br> Enroll today — and watch their brilliance unfold
             </p>
         </div>
 
         <div class="form">
-            <a href="tel:+2347066550517" target="_blank"><img src="./assets/icons/phone-call-telephone-svgrepo-com.svg" alt=""></a>
-            <a href="mailto:dochumaacademy@gmail.com" target="_blank"><img src="./assets/icons/gmail-svgrepo-com.svg" alt=""></a>
-            <a href="https://www.facebook.com/profile.php?id=61580815124025&mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/facebook-network-communication-internet-interaction-svgrepo-com.svg" alt=""></a>
-            <a href="https://wa.me/2347066550517?text=Hello%2C%20I%20visited%20DOCHUMA%20Academy%20website%20and%20I%27m%20interested%20in%20some%20of%20your%20services.%20Could%20you%20please%20provide%20more%20information?" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/whatsapp-icon-logo-svgrepo-com.svg" alt=""></a>
-
-
+            <a href="tel:+2347066550517" target="_blank"><img src="./assets/icons/phone-call-telephone-svgrepo-com.svg" alt="Phone Call"></a>
+            <a href="mailto:dochumaacademy@gmail.com" target="_blank"><img src="./assets/icons/gmail-svgrepo-com.svg" alt="Email"></a>
+            <a href="https://www.facebook.com/profile.php?id=61580815124025&mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/facebook-network-communication-internet-interaction-svgrepo-com.svg" alt="Facebook"></a>
+            <a href="https://wa.me/2347066550517?text=Hello%2C%20I%20visited%20DOCHUMA%20Academy%20website%20and%20I%27m%20interested%20in%20some%20of%20your%20services.%20Could%20you%20please%20provide%20more%20information?" target="_blank" rel="noopener noreferrer"><img src="./assets/icons/whatsapp-icon-logo-svgrepo-com.svg" alt="Whatsapp"></a>
         </div>
     </div>
 
     <footer>
         <p>&copy; 2025 Dochuma Enterprise. All Rights Reserved</p>
-        <p style="font-family: monospace;">Website design and build by <a href="https://www.x.com/irhayeElvis" target="_blank">Hashtag VI</a></p>
+        <p style="font-family: monospace; animation: 1s bounce infinite;">Website design and development by <a href="https://www.x.com/irhayeElvis" target="_blank">Hashtag VI</a> - Tel: <a href="tel:+2347066550517" target="_blank">+234 816 057 5048</a></p>
     </footer>
 
     <script src="assets/script.js"></script>
