fixed video size glitch, fixed missing preloader, added contact number on the  footer

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     <meta name="twitter:creator" content="@irhayeElvis">
 </head>
 <body>
-    <!-- <section class="loader">
+    <section class="loader">
         <div class="intro-heading">
             <p id="i">Building</p> <p id="ii">Fast </p> <p id="iii">Thinkers</p> <p id="iv">for a</p> <p id="v">Smarter</p> <p id="vi">Tomorrow</p>
         </div>
-    </section> -->
+    </section>
 
     <!-- nav-bar -->
     <div class="actual-menu">
@@ -219,7 +219,7 @@
 
     <footer>
         <p>&copy; 2025 Dochuma Enterprise. All Rights Reserved</p>
-        <p style="font-family: monospace; animation: 1s bounce infinite;">Website design and development by <a href="https://www.x.com/irhayeElvis" target="_blank">Hashtag VI</a> - Tel: <a href="tel:+2347066550517" target="_blank">+234 816 057 5048</a></p>
+        <p style="font-family: monospace; animation: 1s bounce infinite;">Website design and development by <a href="https://www.x.com/irhayeElvis" target="_blank">Hashtag VI</a> - Tel: <a href="tel:+2348160575048" target="_blank">+234 816 057 5048</a></p>
     </footer>
 
     <script src="assets/script.js"></script>
