--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dochuma Academy</title>
-    <link rel="apple-touch-icon" href="assets/images/dochuma-logo_upscaled.jpg">
-    <link rel="shortcut icon" href="assets/images/dochuma-logo_upscaled.jpg" type="image/x-icon">
-    <link re="icon" type="image/jpg" href="assets/images/dochuma-logo_upscaled.jpg">
+    <link rel="apple-touch-icon" href="assets/images/dochuma-logo_upscaled-modified.png">
+    <link rel="shortcut icon" href="assets/images/dochuma-logo_upscaled-modified.png" type="image/x-icon">
+    <link rel="icon" type="image/png" href="assets/images/dochuma-logo_upscaled-modified.png">
     <link rel="stylesheet" href="assets/animation.css">
     <link rel="stylesheet" href="assets/style.css">
     <link rel="stylesheet" href="assets/responsive.css">
@@ -16,11 +16,11 @@
     <!-- meta card -->
     <meta property="og:title" content="Dochuma Academy">
     <meta property="og:description" content="Join Dochuma Academy, where every child becomes a human calculator">
-    <meta property="og:image" content="assets/images/dochuma-logo_upscaled.jpg">
+    <meta property="og:image" content="assets/images/dochuma-logo_upscaled-modified.png">
     <meta property="og:type" content="website">
 
     <!-- twitter card -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="assets/images/dochuma-logo_upscaled.png">
     <meta name="twitter:title" content="Dochuma Academy">
     <meta name="twitter:description" content="Join Dochuma Academy, where every child becomes a human calculator">
     <meta name="twitter:image" content="assets/images/dochuma-logo_upscaled.jpg">
