--- a/index.html
+++ b/index.html
@@ -27,16 +27,14 @@
     <meta name="twitter:creator" content="@irhayeElvis">
 </head>
 <body>
-    <!-- <section class="loader">
+    <section class="loader">
         <div class="intro-heading">
             <p id="i">Building</p> <p id="ii">Fast </p> <p id="iii">Thinkers</p> <p id="iv">for a</p> <p id="v">Smarter</p> <p id="vi">Tomorrow</p>
         </div>
-    </section> -->
+    </section>
 
     <!-- nav-bar -->
     <div class="actual-menu">
-        <img src="assets/images/dochuma-logo_upscaled-modified.png" alt="">
-        <p>Dochuma Academy</p>
         <ul>
             <a href="#home"><li>Home</li></a>
             <a href="#intro"><li>Introduction</li></a>
